# ai-email-assistant

./: .env.example  .gitignore  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt  run.ps1  run_tunnel.ps1  seed_demo.py  seed_today.py  start_cloudflare.bat  start_server.bat  wsgi.py
app/: main.py  schemas.py
app/ai/: classifier.py  cloud_classifier.py  hf_classifier.py  model_loader.py  ollama_classifier.py  scorer.py  spam_detector.py  spamassassin_client.py
app/api/: auth_routes.py  routes.py  schemas.py
app/core/: auth.py  logger.py  security.py  settings.py
app/feedback/: capture.py  retrain.py
app/ingestion/: __init__.py  gmail_client.py  imap_client.py  outlook_client.py
app/jobs/: cleanup.py  retrain_job.py  scheduler.py  sync_job.py
app/monitoring/: metrics.py
app/preprocessing/: cleaner.py  dedupe.py  parser.py
app/routing/: actions.py  router.py  rules.py
app/storage/: db.py  models.py  repository.py
app/templates/: dashboard.html  login.html
app/utils/: email_utils.py  text_utils.py
deploy/: Dockerfile  docker-compose.yml  guide.md  nginx.conf  start.sh
deploy/cloudflared/: config.yml
docs/: PROJECT_ANALYSIS.md
scripts/: evaluate_model.py  seed_demo_data.py  seed_labels.py  test_ollama.py  test_pipeline_payloads.py  train_model.py
tests/: test_classifier.py  test_cleanup.py  test_hf_classifier.py  test_ingestion.py  test_router.py  test_spam_detector.py  test_spamassassin.py
