[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-email-assistant"
version = "1.0.0"
description = "AI-powered email classification and routing assistant with FastAPI, Ollama SLM, PostgreSQL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0", "uvicorn>=0.30.0", "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0", "pydantic>=2.0.0", "pydantic-settings>=2.0.0",
    "APScheduler>=3.10.0", "cryptography>=43.0.0", "requests>=2.32.0",
    "beautifulsoup4>=4.12.0", "IMAPClient>=3.0.0",
    "google-api-python-client>=2.147.0", "google-auth-oauthlib>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
